Launch updated Vault homepage with full product thumbnails and sections

--- a/vault.html
+++ b/vault.html
@@ -1,7 +1,164 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<head><!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AnchorStack Vault</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fdfdfd;
+      color: #222;
+    }
+    header {
+      text-align: center;
+      padding: 2rem 1rem 0.5rem;
+    }
+    header img {
+      height: 60px;
+    }
+    h2.section-header {
+      text-align: center;
+      margin: 2rem 0 1rem;
+      color: #004f4f;
+      font-size: 1.5rem;
+    }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+      padding: 1rem 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .tile {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      overflow: hidden;
+      transition: transform 0.2s;
+      text-align: center;
+    }
+    .tile:hover {
+      transform: scale(1.015);
+    }
+    .tile img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+    .tile h3 {
+      margin: 0.75rem;
+      font-size: 1.2rem;
+      color: #004f4f;
+    }
+    .tile a {
+      display: inline-block;
+      margin-bottom: 1.25rem;
+      color: white;
+      background: #007f7f;
+      padding: 0.6rem 1.25rem;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
+      margin: 3rem 1rem 1rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="/images/anchorstack_logo.png" alt="AnchorStack Logo" />
+    <h1>Welcome to the AnchorStack Vault</h1>
+  </header>
+
+  <h2 class="section-header">🟦 Free Tier Access</h2>
+  <section class="container">
+    <div class="tile">
+      <img src="/images/calm_clarity_kit.png" alt="Calm Clarity Kit" />
+      <h3>Calm Clarity Kit – 7-Day Edition</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/nupwf">View Product</a>
+    </div>
+    <div class="tile">
+      <img src="/images/creator_vault_starter.png" alt="AnchorStack Creator Vault" />
+      <h3>Creator Vault Starter Pack</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/mbxcud">View Product</a>
+    </div>
+  </section>
+
+  <h2 class="section-header">🟩 Mid Tier Vault – $29/mo Access</h2>
+  <section class="container">
+    <div class="tile">
+      <img src="/images/clarity_core_bundle.png" alt="Clarity Core Bundle" />
+      <h3>Clarity Core Bundle</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/msenf">View Product</a>
+    </div>
+    <div class="tile">
+      <img src="/images/work_life_integration_mastery.png" alt="Work-Life Integration Mastery" />
+      <h3>Work-Life Integration Mastery</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/lapqw">View Product</a>
+    </div>
+    <div class="tile">
+      <img src="/images/momentum_mapping_toolkit.png" alt="Momentum Mapping Toolkit" />
+      <h3>Momentum Mapping Toolkit</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/npruu">View Product</a>
+    </div>
+  </section>
+
+  <h2 class="section-header">🟨 Top Tier Vault – $129/yr Bundle</h2>
+  <section class="container">
+    <div class="tile">
+      <img src="/images/clarity_master_bundle.png" alt="Clarity Master Bundle" />
+      <h3>Clarity Master Bundle</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/gxpksf">View Product</a>
+    </div>
+    <div class="tile">
+      <img src="/images/hustlemode_notion_command.png" alt="HustleMode Command Center" />
+      <h3>HustleMode Notion Command Center</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/jfkdn">View Product</a>
+    </div>
+    <div class="tile">
+      <img src="/images/digital_clarity_kit.png" alt="Digital Clarity Kit" />
+      <h3>The Calm Clarity Blueprint – Digital Kit</h3>
+      <a href="https://grafixartistry6.gumroad.com/l/eylhzc">View Product</a>
+    </div>
+  </section>
+
+  <h2 class="section-header">📬 Substack, Affiliate & Collaboration</h2>
+  <section class="container">
+    <div class="tile">
+      <img src="/images/substack_join.png" alt="Substack Newsletter" />
+      <h3>Join Our Substack</h3>
+      <a href="https://rickyjarnagin.substack.com/">Subscribe</a>
+    </div>
+    <div class="tile">
+      <img src="/images/affiliate_program.png" alt="Affiliate Program" />
+      <h3>Become an Affiliate</h3>
+      <a href="https://grafixartistry6.gumroad.com/affiliates">Join Now</a>
+    </div>
+    <div class="tile">
+      <img src="/images/collaborate_with_us.png" alt="Collaborate With Us" />
+      <h3>Collaborate With AnchorStack</h3>
+      <a href="mailto:hello@anchorstack.pro">Pitch an Idea</a>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 AnchorStack • Clarity. Momentum. Creation.
+  </footer>
+</body>
+</html>
+
 
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
