Revamped Vault homepage with featured product and enhanced layout

--- a/vault.html
+++ b/vault.html
@@ -123,7 +123,7 @@
     <div class="tile">
       <h3>🧠 Collaborate With Us</h3>
       <p>Got an idea, toolkit, or template you want to launch with us? Let’s build it together.</p>
-      <a href="mailto:hello@anchorstack.pro">Pitch Your Idea</a>
+      <a href="mailto:support@anchorstack.pro">Pitch Your Idea</a>
     </div>
   </section>
 
