--- a/thank-you.html
+++ b/thank-you.html
@@ -1,123 +1,56 @@
-<!-- Trigger deploy -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome to AnchorStack</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>You're In – 30-Day Focus Challenge</title>
   <style>
-    :root {
-      --primary: #007f7f;
-      --highlight: #004f4f;
-      --background: #fdfdfd;
-      --accent: #e0f7f7;
-      --dark: #1e1e1e;
-    }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--background);
-      color: var(--dark);
-      margin: 0;
-      padding: 0;
-    }
-    .top-bar {
-      background: var(--highlight);
-      color: white;
-      padding: 0.5rem 1rem;
+      font-family: 'Segoe UI', sans-serif;
+      background: #fdfdfd;
+      color: #222;
+      padding: 2rem 1rem;
       text-align: center;
-      font-weight: bold;
-      font-size: 1rem;
     }
-    .hero {
-      text-align: center;
-      padding: 3rem 1.5rem;
-      background: white;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    header img {
+      height: 60px;
+      margin-bottom: 1rem;
     }
     h1 {
-      color: var(--highlight);
-      font-size: 2.4rem;
-      margin-bottom: 0.5rem;
+      color: #004f4f;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
     p {
-      font-size: 1.15rem;
-      margin: 1rem 0;
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
-    .vault-access {
-      background: var(--accent);
-      padding: 2rem;
-      margin: 2rem auto;
-      max-width: 520px;
-      border-left: 5px solid var(--primary);
-      border-radius: 8px;
-      text-align: center;
-    }
-    .vault-access h2 {
-      color: var(--highlight);
-      margin-top: 0;
-      font-size: 1.5rem;
-    }
-    .vault-code {
-      font-size: 1.6rem;
+    a.share-link {
+      color: #007f7f;
       font-weight: bold;
-      color: var(--highlight);
-      margin: 1rem 0;
-    }
-    .vault-button {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.75rem 1.5rem;
-      background: var(--primary);
-      color: white;
       text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background 0.3s ease;
+      border-bottom: 2px dotted #007f7f;
     }
-    .vault-button:hover {
-      background: #005a5a;
+    a.share-link:hover {
+      color: #005f5f;
     }
-    footer {
-      text-align: center;
-      padding: 2rem 1rem 1rem;
-      font-size: 0.9rem;
-      color: #777;
+    .cta {
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
+  <header>
+    <img src="/images/anchorstack_logo.png" alt="AnchorStack Logo" />
+  </header>
 
-  <div class="top-bar">AnchorStack — Clarity. Momentum. Creation.</div>
+  <h1>You're In. Let’s Get Focused.</h1>
+  <p>Thanks for joining the <strong>30-Day Focus Challenge</strong> — you're now officially an AnchorStack Insider.</p>
+  <p>Your Day 1 guide and tools are on their way to your inbox.</p>
 
-  <div class="hero">
-    <h1>You're In. Let’s Get Focused.</h1>
-    <p>Thanks for joining the 30-Day Focus Challenge — you're now officially an AnchorStack Insider.</p>
-    <p>Your Day 1 guide and tools are on their way to your inbox.</p>
-  <a href="https://anchorstack.pro/?utm_source=thankyou&utm_medium=referral&utm_campaign=share_challenge" target="_blank">
-  Share the challenge
-</a>
-
-
-</div>
-
-  <div class="vault-access">
-  <h2>🎁 The Vault Is Now Unlocked</h2>
-  <p>You now have insider access to the AnchorStack Vault — packed with free tools to help you stay focused, launch faster, and build better.</p>
-  <a class="vault-button" href="/vault.html">Enter the Vault</a>
-
-<p style="margin-top: 1rem; font-size: 0.95rem; color: #333;">
-  Want exclusive bonus kits like the Sprint Planner? Upgrade to <a href="https://grafixartistry6.gumroad.com/l/xalvnc" style="color: var(--highlight); font-weight: bold;">Mid Tier</a> to unlock even more.
-</p>
-<p style="font-size: 0.9rem; margin-top: 2rem;">
-  Know a creator who needs this?  
-  <a href="https://grafixartistry6.gumroad.com/l/yvmrn" target="_blank" style="color: var(--highlight); font-weight: bold;">Build. Launch. Earn</a>
-</p>
-
-</div>
-
-  <footer>© 2025 AnchorStack • Welcome aboard. You’re part of the clarity crew now.</footer>
-
+  <div class="cta">
+    <a class="share-link" href="https://anchorstack.pro">← Share the Challenge</a>
+  </div>
 </body>
 </html>
 
