Clean up unused HTML files and streamline structure

--- a/thank-you.html
+++ b/thank-you.html
@@ -51,6 +51,12 @@
   <div class="cta">
     <a class="share-link" href="https://anchorstack.pro">← Share the Challenge</a>
   </div>
+<script>
+  setTimeout(() => {
+    window.location.href = "https://anchorstack.pro/vault.html";
+  }, 10000);
+</script>
+
 </body>
 </html>
 
