Updated thank-you page: removed redirect, improved CTA

--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>You're In – 30-Day Focus Challenge</title>
@@ -13,8 +14,8 @@
       text-align: center;
     }
     header img {
-      height: 60px;
-      margin-bottom: 1rem;
+      height: 100px;
+      margin-bottom: 1.5rem;
     }
     h1 {
       color: #004f4f;
@@ -25,17 +26,20 @@
       font-size: 1.1rem;
       margin-bottom: 1rem;
     }
-    a.share-link {
-      color: #007f7f;
-      font-weight: bold;
-      text-decoration: none;
-      border-bottom: 2px dotted #007f7f;
-    }
-    a.share-link:hover {
-      color: #005f5f;
-    }
     .cta {
       margin-top: 2rem;
+    }
+    .cta a {
+      color: white;
+      background: #007f7f;
+      padding: 0.75rem 1.5rem;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+    .cta a:hover {
+      background: #005f5f;
     }
   </style>
 </head>
@@ -46,17 +50,11 @@
 
   <h1>You're In. Let’s Get Focused.</h1>
   <p>Thanks for joining the <strong>30-Day Focus Challenge</strong> — you're now officially an AnchorStack Insider.</p>
-  <p>Your Day 1 guide and tools are on their way to your inbox.</p>
+  <p>Your Day 1 guide and clarity tools are already on their way to your inbox.</p>
+  <p>When you're ready, head into the Vault to start exploring your new tools.</p>
 
   <div class="cta">
-    <a class="share-link" href="https://anchorstack.pro">← Share the Challenge</a>
+    <a href="https://anchorstack.pro/vault.html">→ Enter the Vault</a>
   </div>
-<script>
-  setTimeout(() => {
-    window.location.href = "https://anchorstack.pro/vault.html";
-  }, 10000);
-</script>
-
 </body>
 </html>
-
