Final homepage + challenge popup integration complete

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
     <button onclick="closeModal()" style="background:none; border:none; color:#007f7f; text-decoration:underline; font-size:0.9rem;">No thanks, just show me the Vault</button>
   </div>
 </div>
+<div class="product-teaser">
+  <p><strong>What’s Inside the Vault?</strong></p>
+  <p>You’ll get ready-to-use tools built to help you plan faster, design smarter, and launch with clarity. From productivity templates to promo visuals, each kit is polished and packed for momentum.</p>
+  <p>No fluff. Just systems that sell.</p>
+</div>
 
 <script>
   function closeModal() {
