--- a/index.html
+++ b/index.html
@@ -2,105 +2,152 @@
 <html lang="en">
 <head>
  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to AnchorStack</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AnchorStack</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fdfdfd;
-      color: #222;
-      padding: 2rem 1rem;
+      font-family: system-ui, sans-serif;
       text-align: center;
+      background: #fff;
+      margin: 0;
+      padding: 2rem;
     }
     header img {
       height: 100px;
       margin-bottom: 1rem;
     }
     h1 {
-      font-size: 2.2rem;
-      color: #004f4f;
-      margin-bottom: 0.5rem;
+      font-size: 2rem;
+      color: #005f56;
     }
-    h2 {
-      font-size: 1.2rem;
-      color: #555;
+    .subtitle {
+      font-weight: 600;
+      color: #444;
+      margin-bottom: 1.2rem;
+    }
+    .lead {
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+    .body-text {
+      max-width: 600px;
+      margin: 0 auto 2rem;
+      color: #333;
+      font-size: 1.1rem;
+    }
+    .cta-button {
+      background-color: #00796b;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
       margin-bottom: 2rem;
     }
+    .cta-button:hover {
+      background-color: #005f56;
+    }
+    .divider {
+      border: none;
+      height: 1px;
+      background: #ddd;
+      margin: 2rem auto;
+      width: 80%;
+    }
     .teaser {
-      font-size: 1.1rem;
       max-width: 700px;
-      margin: 0 auto 2rem;
-      line-height: 1.6;
+      margin: 0 auto;
+      font-size: 1.1rem;
+      color: #333;
     }
-    .cta {
-      margin: 2rem 0;
+    .modal-backdrop {
+      background-color: rgba(0, 0, 0, 0.4);
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
     }
-    .cta a {
-      color: white;
-      background: #007f7f;
+    .modal {
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
+      max-width: 480px;
+      animation: fadeIn 0.4s ease-out forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.98); }
+      to { opacity: 1; transform: scale(1); }
+    }
+    .modal button {
+      background-color: #00796b;
+      color: #fff;
+      border: none;
+      border-radius: 12px;
       padding: 0.75rem 1.5rem;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
       font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      margin: 1rem 0;
     }
-    .cta a:hover {
-      background: #005f5f;
+    .modal button:hover {
+      background-color: #005f56;
     }
-    iframe {
-      margin-top: 2rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+    .modal a {
+      display: block;
+      color: #00796b;
+      font-size: 0.9rem;
+      text-decoration: underline;
+      margin-top: 0.5rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="/images/anchorstack_logo.png" alt="AnchorStack Logo" />
+    <img src="/images/logo.png" alt="AnchorStack Logo">
   </header>
 
   <h1>AnchorStack</h1>
-  <h2>Clarity Kits & Momentum Tools for Creators</h2>
+  <p class="subtitle">Clarity Kits & Momentum Tools for Creators</p>
+  <p class="lead">Most creators aren’t short on ideas. They’re short on systems.</p>
+  <p class="body-text">
+    The Focus Vault isn’t just another collection of templates — it’s a launch-ready toolkit built for clarity, consistency, and real momentum. Inside, you’ll find editable planners, workflow accelerators, promo visuals, and white-label bundles that help you build fast and sell with integrity.
+  </p>
+  <p class="body-text">
+    This is your unfair advantage — packaged, polished, and ready to deploy.
+  </p>
+
+  <button class="cta-button" onclick="openModal()">→ Enter the Vault</button>
+
+  <hr class="divider">
 
   <div class="teaser">
-    <p><strong>Most creators aren’t short on ideas. They’re short on systems.</strong></p>
-    <p>The Focus Vault isn’t just another collection of templates — it’s a launch-ready toolkit built for clarity, consistency, and real momentum. Inside, you’ll find editable planners, workflow accelerators, promo visuals, and white-label bundles that help you build fast and sell with integrity.</p>
-    <p>This is your unfair advantage — packaged, polished, and ready to deploy.</p>
+    <p>You’ll get ready-to-use tools built to help you plan faster, design smarter, and launch with clarity.</p>
+    <p>From productivity templates to promo visuals, each kit is polished and packed for momentum.</p>
+    <p><strong>No fluff. Just systems that sell.</strong></p>
   </div>
 
-  <div class="cta">
-    <a href="/vault.html">→ Enter the Vault</a>
+  <!-- Modal -->
+  <div class="modal-backdrop" id="challengeModal">
+    <div class="modal">
+      <p><strong>🧠 Ready to Focus?</strong></p>
+      <p>Join the free <strong>30-Day Focus Challenge</strong> — daily prompts, bite-sized tools, and no distractions.</p>
+      <button onclick="window.location.href='challenge.html'">✅ Join the Challenge</button>
+      <a href="vault.html">No thanks, just show me the Vault</a>
+    </div>
   </div>
 
-  <iframe src="https://rickyjarnagin.substack.com/embed" width="100%" height="180" frameborder="0" scrolling="no"></iframe>
-
-<!-- Challenge Modal -->
-<div id="challengeModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:#000000a8; z-index:1000;">
-  <div style="background:#fff; max-width:500px; margin:10% auto; padding:2rem; border-radius:8px; box-shadow:0 4px 10px rgba(0,0,0,0.3); text-align:center;">
-    <h2>🧠 Ready to Focus?</h2>
-    <p>Join the free <strong>30-Day Focus Challenge</strong> — daily prompts, bite-sized tools, and no distractions.</p>
-    <a href="challenge.html" style="background:#007f7f; color:#fff; padding:0.6rem 1.2rem; display:inline-block; margin-top:1rem; border-radius:5px; text-decoration:none;">✅ Join the Challenge</a>
-    <br/><br/>
-    <button onclick="closeModal()" style="background:none; border:none; color:#007f7f; text-decoration:underline; font-size:0.9rem;">No thanks, just show me the Vault</button>
-  </div>
-</div>
-<div class="product-teaser">
-  <p><strong>What’s Inside the Vault?</strong></p>
-  <p>You’ll get ready-to-use tools built to help you plan faster, design smarter, and launch with clarity. From productivity templates to promo visuals, each kit is polished and packed for momentum.</p>
-  <p>No fluff. Just systems that sell.</p>
-</div>
-
-<script>
-  function closeModal() {
-    document.getElementById('challengeModal').style.display = 'none';
-  }
-  window.onload = () => {
-    setTimeout(() => {
-      document.getElementById('challengeModal').style.display = 'block';
-    }, 5000);
-  };
-</script>
-
+  <script>
+    function openModal() {
+      document.getElementById('challengeModal').style.display = 'flex';
+    }
+  </script>
 </body>
 </html>
