--- a/index.html
+++ b/index.html
@@ -2,152 +2,69 @@
 <html lang="en">
 <head>
  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AnchorStack</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    body {
-      font-family: system-ui, sans-serif;
-      text-align: center;
-      background: #fff;
-      margin: 0;
-      padding: 2rem;
-    }
     header img {
       height: 100px;
-      margin-bottom: 1rem;
+      position: relative;
+      z-index: 1055;
+      opacity: 0;
+      animation: fadeInLogo 0.8s ease-in forwards;
+      animation-delay: 0.3s;
     }
-    h1 {
-      font-size: 2rem;
-      color: #005f56;
+
+    @keyframes fadeInLogo {
+      to {
+        opacity: 1;
+      }
     }
-    .subtitle {
-      font-weight: 600;
-      color: #444;
-      margin-bottom: 1.2rem;
-    }
-    .lead {
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-    .body-text {
-      max-width: 600px;
-      margin: 0 auto 2rem;
-      color: #333;
-      font-size: 1.1rem;
-    }
-    .cta-button {
-      background-color: #00796b;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      margin-bottom: 2rem;
-    }
-    .cta-button:hover {
-      background-color: #005f56;
-    }
-    .divider {
-      border: none;
-      height: 1px;
-      background: #ddd;
-      margin: 2rem auto;
-      width: 80%;
-    }
-    .teaser {
-      max-width: 700px;
-      margin: 0 auto;
-      font-size: 1.1rem;
-      color: #333;
-    }
+
+    /* Modal overlay override to prevent hiding logo */
     .modal-backdrop {
-      background-color: rgba(0, 0, 0, 0.4);
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
+      z-index: 1049 !important;
     }
+
     .modal {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
-      max-width: 480px;
-      animation: fadeIn 0.4s ease-out forwards;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.98); }
-      to { opacity: 1; transform: scale(1); }
-    }
-    .modal button {
-      background-color: #00796b;
-      color: #fff;
-      border: none;
-      border-radius: 12px;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      margin: 1rem 0;
-    }
-    .modal button:hover {
-      background-color: #005f56;
-    }
-    .modal a {
-      display: block;
-      color: #00796b;
-      font-size: 0.9rem;
-      text-decoration: underline;
-      margin-top: 0.5rem;
+      z-index: 1050;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="/images/logo.png" alt="AnchorStack Logo">
+    <img src="images/logo.png" alt="AnchorStack Logo" />
   </header>
 
-  <h1>AnchorStack</h1>
-  <p class="subtitle">Clarity Kits & Momentum Tools for Creators</p>
-  <p class="lead">Most creators aren’t short on ideas. They’re short on systems.</p>
-  <p class="body-text">
-    The Focus Vault isn’t just another collection of templates — it’s a launch-ready toolkit built for clarity, consistency, and real momentum. Inside, you’ll find editable planners, workflow accelerators, promo visuals, and white-label bundles that help you build fast and sell with integrity.
-  </p>
-  <p class="body-text">
-    This is your unfair advantage — packaged, polished, and ready to deploy.
-  </p>
-
-  <button class="cta-button" onclick="openModal()">→ Enter the Vault</button>
-
-  <hr class="divider">
-
-  <div class="teaser">
-    <p>You’ll get ready-to-use tools built to help you plan faster, design smarter, and launch with clarity.</p>
-    <p>From productivity templates to promo visuals, each kit is polished and packed for momentum.</p>
-    <p><strong>No fluff. Just systems that sell.</strong></p>
-  </div>
+  <!-- Your main content here -->
 
   <!-- Modal -->
-  <div class="modal-backdrop" id="challengeModal">
-    <div class="modal">
-      <p><strong>🧠 Ready to Focus?</strong></p>
-      <p>Join the free <strong>30-Day Focus Challenge</strong> — daily prompts, bite-sized tools, and no distractions.</p>
-      <button onclick="window.location.href='challenge.html'">✅ Join the Challenge</button>
-      <a href="vault.html">No thanks, just show me the Vault</a>
+  <div class="modal fade" id="focusModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center p-4">
+        <h5>🧠 Ready to Focus?</h5>
+        <p>
+          Join the free <strong>30-Day Focus Challenge</strong> — daily prompts, bite-sized tools, and no distractions.
+        </p>
+        <a class="btn btn-teal mt-3" href="challenge.html">✅ Join the Challenge</a><br />
+        <a href="vault.html" class="small">No thanks, just show me the Vault</a>
+      </div>
     </div>
   </div>
 
   <script>
-    function openModal() {
-      document.getElementById('challengeModal').style.display = 'flex';
-    }
+    // Wait for full page load, then trigger modal
+    window.addEventListener('load', () => {
+      const modal = new bootstrap.Modal(document.getElementById('focusModal'));
+      modal.show();
+    });
   </script>
+
+  <!-- Bootstrap JS and dependencies (if not already included) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
+
