Disable sidebar wrapper, force banner-only layout in vault.html

--- a/vault.html
+++ b/vault.html
@@ -144,20 +144,22 @@
     <!-- …your nav links here… -->
   </header>
 
-  <!-- Full-width A/B banner -->
-  <div id="variant-banner" class="thoughts-banner">
+ 
+
+     </header>
+
+  <!-- Sidebar (A/B variant) temporarily disabled
+  <aside id="variant-sidebar" class="thoughts-sidebar">
     <span class="quote-text"></span>
-    <a href="#" class="show-thought">👉 View Today’s Thought</a>
-  </div>
+    <a href="#" class="show-thought">Learn More →</a>
+  </aside>
+  -->
 
-  <!-- Two-column main + sidebar -->
-  <div class="layout">
+  <!-- Main Vault Content (full-width) -->
+  <main>
+    <!-- …your vault content here… -->
+  </main>
 
-    <!-- Sidebar (A/B variant) -->
-    <aside id="variant-sidebar" class="thoughts-sidebar">
-      <span class="quote-text"></span>
-      <a href="#" class="show-thought">Learn More →</a>
-    </aside>
 
     <!-- Main Vault Content -->
     <main>
