Fix logo path and update OG image

--- a/vault.html
+++ b/vault.html
@@ -17,7 +17,8 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="AnchorStack Vault – Creator Tools Without the Noise" />
 <meta name="twitter:description" content="Explore clarity kits, Notion dashboards, productivity systems, and white-label bundles — all built for creative independence." />
-<meta name="twitter:image" content="https://anchorstack.pro/images/anchorstack-og-image.jpg" />
+<meta property="og:image" content="https://anchorstack.pro/images/anchorstack-og-preview.jpg" />
+
 <style>
   .trending-box {
     background: linear-gradient(to bottom, #e8faff, #f7fcff);
@@ -145,6 +146,7 @@
   <!-- Hero Section -->
   <section class="hero-section">
     <img src="/images/logo.png" alt="AnchorStack Logo" style="height: 100px;" />
+
     <h1 style="font-size: 2rem; margin-top: 1rem;">Unlock Your AnchorStack Vault</h1>
     <p style="font-size: 1.2rem; color: #555;">
       Tools, templates, and clarity kits designed to help creators thrive — no fluff.
@@ -167,7 +169,7 @@
       <li>✔️ License to rebrand or sell</li>
     </ul>
     <div style="text-align: center; margin-top: 1rem;">
-      <a href="https://grafixartistry6.gumroad.com/l/npruu" class="cta-button" style="background-color: #e67e22;">🚀 Grab It Now for $49</a>
+      <a href="https://grafixartistry6.gumroad.com/l/xlbheu" class="cta-button" style="background-color: #e67e22;">🚀 Grab It Now for $49</a>
     </div>
   </section>
 <!-- Trending This Week Section -->
