Fix logo path and update OG image

--- a/vault.html
+++ b/vault.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Force Update -->
   <!-- SEO & Social Meta Tags -->
 <meta name="description" content="Discover tools, templates, and clarity kits to help creators stay focused and productive. AnchorStack Vault gives you instant access to digital products designed to help you build and grow—without the noise." />
 <meta name="keywords" content="creator tools, digital products, clarity kits, productivity, anchorstack, notion dashboards, hustlemode, reset kits, focus tools, passive income, templates" />
