--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
 </script>
 <!-- Install this snippet AFTER the Tracking code. -->
 <script>
-var userId = your_user_id || null; // Replace your_user_id with your own if available.
-window.hj('identify', userId, {
-    // Add your own custom attributes here. Some EXAMPLES:
-    // 'Signed up': '2019—06-20Z', // Signup date in ISO-8601 format.
-    // 'Last purchase category': 'Electronics', // Send strings with quotes around them.
-    // 'Total purchases': 15, // Send numbers without quotes.
-    // 'Last purchase date': '2019-06-20Z', // Send dates in ISO-8601 format.
-    // 'Last refund date': null, // Send null when no value exists for a user.
-});
+  var userId = "Ricky Jarnagin";
+  window.hj('identify', userId, {
+    'User Name': 'Ricky Jarnagin',
+    'Role': 'Site Owner',
+    'Plan': 'All Access',
+    'Identified': true
+  });
 </script>
   <style>
     body {
