🚀 Final Vault push: corrected image paths and layout ready

--- a/vault.html
+++ b/vault.html
@@ -152,6 +152,12 @@
   background-color: #f9f9f9;
 }
 </style>
+.product-card img {
+  object-fit: cover;
+  width: 100%;
+  height: 240px;
+  border-radius: 6px;
+}
 
 </head>
 <body>
@@ -214,7 +220,7 @@
 <div class="product-grid">
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #e74c3c;">🔥 Top Seller</div>
-    <img src="images/focus-vault-thumb.webp" alt="Focus Vault" />
+    <img src="images/focus-vault.webp" alt="Focus Vault" />
     <h3>Focus Vault</h3>
     <p>Editable kit to launch your own productivity system. Canva slides + resale license included.</p>
     <a href="https://grafixartistry6.gumroad.com/l/npruu?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $49</a>
@@ -222,7 +228,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #8e44ad;">🧰 Bundle</div>
-    <img src="images/clarity-core-thumb.webp" alt="Clarity Core Bundle" />
+    <img src="images/clarity-core.webp" alt="Clarity Core Bundle" />
     <h3>Clarity Core Bundle</h3>
     <p>Your foundation for focused living. Includes 3 core tools and a bonus 7-day roadmap.</p>
     <a href="https://grafixartistry6.gumroad.com/l/msenf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Only $39</a>
@@ -230,7 +236,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #27ae60;">🎯 Creator Favorite</div>
-    <img src="images/calm-clarity-thumb.webp" alt="Calm Clarity Kit" />
+    <img src="images/calm-clarity.webp" alt="Calm Clarity Kit" />
     <h3>Calm Clarity Kit – 7-Day Edition</h3>
     <p>Mini-reset kit to realign your day. Includes printable planner, audio prompts, and toolkit.</p>
     <a href="https://grafixartistry6.gumroad.com/l/nupwf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $15</a>
@@ -238,7 +244,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #f39c12;">🚀 Launch Special</div>
-    <img src="images/work-life-thumb.webp" alt="Work-Life Integration Mastery" />
+    <img src="images/work-life.webp" alt="Work-Life Integration Mastery" />
     <h3>Work-Life Integration Mastery</h3>
     <p>End burnout before it begins. Strategic guide to align your work with your life — sustainably.</p>
     <a href="https://grafixartistry6.gumroad.com/l/lapqw?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Now $9</a>
@@ -246,7 +252,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-    <img src="images/hustlemode-command-thumb.webp" alt="HustleMode Notion Command Center" />
+    <img src="images/hustlemode-command.webp" alt="HustleMode Notion Command Center" />
     <h3>HustleMode Command Center</h3>
     <p>All-in-one Notion dashboard to launch, track, and grow your side hustle or digital product empire.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jfkdn?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome
@@ -255,14 +261,14 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #c0392b;">🔥 Top Seller</div>
-    <img src="images/launch-combo-thumb.webp" alt="Launch & Earn Combo Pack" />
+    <img src="images/launch-combo.webp" alt="Launch & Earn Combo Pack" />
     <h3>Launch & Earn Combo Pack</h3>
     <p>Everything you need to go from idea to income — two full products bundled into one power pack.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jqzdtq?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Combo Deal – $49</a>
   </div>
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-  <img src="images/momentum-mapping-thumb.webp" alt="Momentum Mapping Toolkit" />
+  <img src="images/momentum-mapping.webp" alt="Momentum Mapping Toolkit" />
   <h3>Momentum Mapping Toolkit</h3>
   <p>Visual goal-tracking system to help creators build rhythm and finish what matters.</p>
   <a href="https://grafixartistry6.gumroad.com/l/npruu" class="cta-button">Only $19</a>
@@ -270,7 +276,7 @@
 
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #3498db;">🆓 Freebie</div>
-  <img src="images/7day-focus-thumb.webp" alt="7-Day Focus Reset Kit" />
+  <img src="images/7day-focus.webp" alt="7-Day Focus Reset Kit" />
   <h3>7-Day Focus Reset Kit</h3>
   <p>A free digital reset designed to help you reclaim attention, energy, and clarity in one week.</p>
   <a href="https://grafixartistry6.gumroad.com/l/mbxcud" class="cta-button">Download Free</a>
@@ -278,7 +284,7 @@
 
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #8e44ad;">🚀 Launch Special</div>
-  <img src="images/decision-detox-thumb.webp" alt="The Decision Detox" />
+  <img src="images/decision-detox.webp" alt="The Decision Detox" />
   <h3>The Decision Detox</h3>
   <p>Clear the clutter of too many options and rebuild a calm, confident decision-making rhythm.</p>
   <a href="https://grafixartistry6.gumroad.com/l/lapqw" class="cta-button">Launch Price – $9</a>
