🚀 Update Vault: fixed image references, added resized .png product graphics

--- a/vault.html
+++ b/vault.html
@@ -14,31 +14,31 @@
 
   <section class="vault-grid">
     <div class="product-box">
-      <img src="/images/7-day-reset-kit.webp" alt="7-Day Reset Kit" class="product-image" />
-      <h2>7-Day Reset Kit</h2>
-      <a href="https://grafixartistry6.gumroad.com/l/7dayreset">View Product</a>
+      <img src="/images/clarity_master.webp" alt="Clarity Master Bundle" class="product-image" />
+      <h2>Clarity Master Bundle</h2>
+      <a href="https://grafixartistry6.gumroad.com/l/gxpksf">View Product</a>
     </div>
 
     <div class="product-box">
-      <img src="/images/calm-clarity.webp" alt="Calm Clarity Kit – 7-Day Edition" class="product-image" />
+      <img src="/images/calm_clarity.png" alt="Calm Clarity Kit – 7-Day Edition" class="product-image" />
       <h2>Calm Clarity Kit – 7-Day Edition</h2>
       <a href="https://grafixartistry6.gumroad.com/l/nupwf">View Product</a>
     </div>
 
     <div class="product-box">
-      <img src="/images/combo-pack.webp" alt="Launch & Earn Combo Pack" class="product-image" />
+      <img src="/images/hustlemode.webp" alt="Launch & Earn Combo Pack" class="product-image" />
       <h2>Launch & Earn Combo Pack</h2>
       <a href="https://grafixartistry6.gumroad.com/l/jqzdtq">View Product</a>
     </div>
 
     <div class="product-box">
-      <img src="/images/decision-detox.webp" alt="The Decision Detox" class="product-image" />
-      <h2>The Decision Detox</h2>
-      <a href="https://grafixartistry6.gumroad.com/l/decisiondetox">View Product</a>
+      <img src="/images/digital_distration.png" alt="The Digital Distraction Cleanse" class="product-image" />
+      <h2>The Digital Distraction Cleanse</h2>
+      <a href="https://grafixartistry6.gumroad.com/l/xtitiw">View Product</a>
     </div>
 
     <div class="product-box">
-      <img src="/images/focus-vault.webp" alt="The Focus Vault" class="product-image" />
+      <img src="/images/focus-vault.png" alt="The Focus Vault" class="product-image" />
       <h2>The Focus Vault</h2>
       <a href="https://grafixartistry6.gumroad.com/l/focusvault">View Product</a>
     </div>
@@ -56,7 +56,7 @@
     </div>
 
     <div class="product-box">
-      <img src="/images/work-life-mastery.webp" alt="Work-Life Integration Mastery" class="product-image" />
+      <img src="/images/work-life.webp" alt="Work-Life Integration Mastery" class="product-image" />
       <h2>Work-Life Integration Mastery</h2>
       <a href="https://grafixartistry6.gumroad.com/l/lapqw">View Product</a>
     </div>
