📦 Final push: Vault layout, PNGs, trending section all fixed

--- a/vault.html
+++ b/vault.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Force Update -->
+
   <!-- SEO & Social Meta Tags -->
 <meta name="description" content="Discover tools, templates, and clarity kits to help creators stay focused and productive. AnchorStack Vault gives you instant access to digital products designed to help you build and grow—without the noise." />
 <meta name="keywords" content="creator tools, digital products, clarity kits, productivity, anchorstack, notion dashboards, hustlemode, reset kits, focus tools, passive income, templates" />
@@ -152,12 +152,14 @@
   background-color: #f9f9f9;
 }
 </style>
+<style>
 .product-card img {
   object-fit: cover;
   width: 100%;
   height: 240px;
   border-radius: 6px;
 }
+</style>
 
 </head>
 <body>
@@ -215,8 +217,6 @@
   </div>
 </section>
 
-
-
 <div class="product-grid">
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #e74c3c;">🔥 Top Seller</div>
@@ -252,7 +252,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-    <img src="images/hustlemode-command.webp" alt="HustleMode Notion Command Center" />
+    <img src="images/work_life.webp" alt="HustleMode Notion Command Center" />
     <h3>HustleMode Command Center</h3>
     <p>All-in-one Notion dashboard to launch, track, and grow your side hustle or digital product empire.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jfkdn?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome
@@ -261,7 +261,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #c0392b;">🔥 Top Seller</div>
-    <img src="images/hustlemode.webp" alt="Launch & Earn Combo Pack" />
+    <img src="images/launch_n_earn.png" alt="Launch & Earn Combo Pack" />
     <h3>Launch & Earn Combo Pack</h3>
     <p>Everything you need to go from idea to income — two full products bundled into one power pack.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jqzdtq?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Combo Deal – $49</a>
@@ -284,7 +284,7 @@
 
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #8e44ad;">🚀 Launch Special</div>
-  <img src="images/decision-detox.webp" alt="The Digital Distraction Cleanse" />
+  <img src="images/digital_distraction.png" alt="The Digital Distraction Cleanse" />
   <h3>The Digital Distraction Cleanse</h3>
   <p>A 7-day guided system to help you reset your focus, clear your digital space, and create a calm rhythm that works in real life — no cold-turkey quitting required.
 
@@ -293,8 +293,6 @@
 </div>
 
 </div>
-
-
 
   <!-- Substack Newsletter -->
   <section id="newsletter-signup" style="padding: 3rem 1rem; background-color: #f9f9f9; text-align: center;">
