🖼️ Fixed product image references to match resized files

--- a/vault.html
+++ b/vault.html
@@ -220,7 +220,7 @@
 <div class="product-grid">
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #e74c3c;">🔥 Top Seller</div>
-    <img src="images/focus-vault.webp" alt="Focus Vault" />
+    <img src="images/focus_vault.png" alt="Focus Vault" />
     <h3>Focus Vault</h3>
     <p>Editable kit to launch your own productivity system. Canva slides + resale license included.</p>
     <a href="https://grafixartistry6.gumroad.com/l/npruu?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $49</a>
@@ -228,7 +228,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #8e44ad;">🧰 Bundle</div>
-    <img src="images/clarity_master.webp" alt="Clarity Master Bundle" />
+    <img src="images/clarity_master_600x400.webp" alt="Clarity Master Bundle" />
     <h3>Clarity Master Bundle</h3>
     <p>Everything you need to reset, refocus, and reclaim your attention.</p>
     <a href="https://grafixartistry6.gumroad.com/l/gxpksf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">A Bargin at $199 (normally $300)</a>
@@ -236,7 +236,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #27ae60;">🎯 Creator Favorite</div>
-    <img src="images/calm_clarity.png" alt="Calm Clarity Kit" />
+    <img src="images/calm_clarity.png" alt="Calm Clarity Kit – 7-Day Edition" />
     <h3>Calm Clarity Kit – 7-Day Edition</h3>
     <p>Mini-reset kit to realign your day. Includes printable planner, audio prompts, and toolkit.</p>
     <a href="https://grafixartistry6.gumroad.com/l/nupwf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $15</a>
@@ -244,7 +244,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #f39c12;">🚀 Launch Special</div>
-    <img src="images/work-life.webp" alt="Work-Life Integration Mastery" />
+    <img src="images/work_life_600x400.webp" alt="Work-Life Integration Mastery" />
     <h3>Work-Life Integration Mastery</h3>
     <p>End burnout before it begins. Strategic guide to align your work with your life — sustainably.</p>
     <a href="https://grafixartistry6.gumroad.com/l/lapqw?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Now $9</a>
@@ -252,7 +252,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-    <img src="images/work_life.webp" alt="HustleMode Notion Command Center" />
+    <img src="images/hustlemode.webp" alt="HustleMode Command Center" />
     <h3>HustleMode Command Center</h3>
     <p>All-in-one Notion dashboard to launch, track, and grow your side hustle or digital product empire.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jfkdn?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome
