--- a/vault.html
+++ b/vault.html
@@ -75,23 +75,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AnchorStack Vault</title>
   <style>
-    body {
-      font-family: system-ui, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #fff;
-    }
-    a {
-      text-decoration: none;
-    }
-    .cta-button {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #008080;
-      color: #fff;
-      border-radius: 8px;
-    }
+  body {
+    font-family: system-ui, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+  }
+  a {
+    text-decoration: none;
+  }
+  .cta-button {
+    display: inline-block;
+    margin: 0.5rem;
+    padding: 0.75rem 1.5rem;
+    background-color: #008080;
+    color: #fff;
+    border-radius: 8px;
+  }
+</style>
+<style>
     .hero-section {
       text-align: center;
       padding: 3rem 1rem;
@@ -223,7 +225,7 @@
     <img src="images/focus_vault.png" alt="Focus Vault" />
     <h3>Focus Vault</h3>
     <p>Editable kit to launch your own productivity system. Canva slides + resale license included.</p>
-    <a href="https://grafixartistry6.gumroad.com/l/npruu?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $49</a>
+    <a href="https://grafixartistry6.gumroad.com/l/xlbheu?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $49</a>
   </div>
 
   <div class="product-card">
@@ -231,7 +233,7 @@
     <img src="images/clarity_master_600x400.webp" alt="Clarity Master Bundle" />
     <h3>Clarity Master Bundle</h3>
     <p>Everything you need to reset, refocus, and reclaim your attention.</p>
-    <a href="https://grafixartistry6.gumroad.com/l/gxpksf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">A Bargin at $199 (normally $300)</a>
+    <a href="https://grafixartistry6.gumroad.com/l/gxpksf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">A Bargin at $99</a>
   </div>
 
   <div class="product-card">
@@ -264,7 +266,7 @@
     <img src="images/launch_n_earn.png" alt="Launch & Earn Combo Pack" />
     <h3>Launch & Earn Combo Pack</h3>
     <p>Everything you need to go from idea to income — two full products bundled into one power pack.</p>
-    <a href="https://grafixartistry6.gumroad.com/l/jqzdtq?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Combo Deal – $49</a>
+    <a href="https://grafixartistry6.gumroad.com/l/jqzdtq?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Combo Deal – $43</a>
   </div>
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
@@ -279,7 +281,7 @@
   <img src="images/7_day_reset.png" alt="7-Day Focus Reset Kit" />
   <h3>7-Day Focus Reset Kit</h3>
   <p>A free digital reset designed to help you reclaim attention, energy, and clarity in one week.</p>
-  <a href="https://grafixartistry6.gumroad.com/l/mbxcud" class="cta-button">Download Free</a>
+  <a href="https://grafixartistry6.gumroad.com/l/whkznx" class="cta-button">Download Free</a>
 </div>
 
 <div class="product-card">
